Add public access block to S3 bucket.

--- a/mybucket/Makefile
+++ b/mybucket/Makefile
@@ -6,3 +6,9 @@ contract:
 
 integration:
 	cd tests/integration && bundle exec rake spec
+
+plan:
+	terraform plan -var-file=test.tfvars
+
+apply:
+	terraform apply -var-file=test.tfvars
