Rename mybucket to tf-aws-s3 for clarity. Add instalation instructions.

--- a/tf-aws-s3/Makefile
+++ b/tf-aws-s3/Makefile
@@ -1,6 +1,10 @@
 include local.env
 export $(shell sed 's/=.*//' local.env)
 
+install:
+	bundle install
+	dep ensure
+
 unit:
 	go test ./tests/unit/...
 
