Add green unit tests

--- a/tf-aws-ec2/Makefile
+++ b/tf-aws-ec2/Makefile
@@ -1,3 +1,4 @@
 unit:
 	conftest test -p test/unit/vpc.rego vpc.tf -i hcl2
 	conftest test -p test/unit/subnet.rego subnet.tf -i hcl2
+	conftest test -p test/unit/securitygroup.rego securitygroup.tf -i hcl2
