Add rendered integration test due to inspec bug

--- a/tf-aws-ec2/Makefile
+++ b/tf-aws-ec2/Makefile
@@ -14,12 +14,15 @@ contract:
 	conftest test -p test/contract/logic.rego $(TFPLAN).json -i hcl
 	conftest test -p test/contract/instances.rego $(TFPLAN).json -i hcl
 
-integration:
-	#$(SETUP) terraform apply
-	$(SETUP) kitchen list
-	$(SETUP) kitchen create default-ubuntu
+apply:
+	$(SETUP) terraform apply
 
-clean:
+integration: apply
+	$(SETUP) kitchen test
+
+clean-kitchen:
 	$(SETUP) kitchen destroy default-ubuntu
+
+clean: clean-kitchen
 	$(SETUP) terraform destroy --force
 	rm $(TFPLAN) $(TFPLAN).json
